# bioFM

./: .env.example  .gitignore  .gitmodules  README.md
libs/cellforge-agents/: README.md  pyproject.toml  requirements.txt
libs/cellforge-agents/examples/: perturbation_run.py
libs/cellforge-agents/src/cellforge/: __init__.py  __main__.py  cli.py  orchestrator.py  problem.py
libs/cellforge-agents/tests/: test_tools.py
libs/test-time-compute/: README.md  pyproject.toml  requirements.txt
libs/test-time-compute/src/ttc/: __init__.py  __main__.py  cli.py  config.py  model_loader.py
libs/test-time-compute/tests/: test_runner_smoke.py  test_scoring.py  test_strategies.py
projects/perturb-seq-eval/: CHANGELOG.md  CITATION.cff  LIVE_RUN.md  README.md  publish.state.json  publish.yml  pyproject.toml  requirements.txt
projects/perturb-seq-eval/artifacts/dry_run/: e1_overlap.json  e2_grid.jsonl  e3_trajectories.json  e3b_task_conditional.json  summary.json
projects/perturb-seq-eval/artifacts/lifecycle/: adamson_lifecycle_runs.json  adamson_live_optimizer.json
projects/perturb-seq-eval/artifacts/lifecycle_dryrun/: dryrun_runs.json
projects/perturb-seq-eval/artifacts/live/: last_run.json  llm_calls.jsonl
projects/perturb-seq-eval/artifacts/local/: e1_overlap.json  e2_grid.jsonl  e3_trajectories.json
projects/perturb-seq-eval/artifacts/real_probes/: adamson_audit.json  adamson_probes.json  adamson_probes_biofm.json  adamson_raw_rounds.json  adamson_raw_rounds_biofm.json  adamson_traces.jsonl  adamson_traces_biofm.jsonl
projects/perturb-seq-eval/artifacts/v0.5.0/: dry_run_summary.json  lifecycle_runs.jsonl  provenance.json  summary.json  trainer_runs.jsonl
projects/perturb-seq-eval/configs/: live.yaml
projects/perturb-seq-eval/docs/: DESIGN.md  INTERNAL_FOLLOWUP.md  MODAL.md  PUBLICATION_CHECKLIST.md  REVIEWER_CRITIQUE.md  SUPPLEMENT.md  SUPPLEMENT_DESIGN.md  THESIS.md
projects/perturb-seq-eval/docs/plans/: 2026-04-22-end-to-end-agentic-lifecycle.md
projects/perturb-seq-eval/examples/: end_to_end.py
projects/perturb-seq-eval/massgen_skill_draft/: README.md  SKILL.md  skill.yaml
projects/perturb-seq-eval/massgen_skill_draft/extractors/: __init__.py  confidence.py  severity.py  test_extractors_skeleton.py
projects/perturb-seq-eval/massgen_skill_draft/handlers/: __init__.py  evaluate.py  preflight.py
projects/perturb-seq-eval/massgen_skill_draft/patches/: PR_DESCRIPTION.md  add-difficulty-metrics.patch
projects/perturb-seq-eval/massgen_skill_draft/prompts/: severity_rater.md
projects/perturb-seq-eval/paper/: README.md  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
projects/perturb-seq-eval/paper/experiments/: generate_tables.py  plot.py
projects/perturb-seq-eval/paper/sections/: v050_experimental_setup.tex  v050_results.tex  v050_results_filled.tex
projects/perturb-seq-eval/paper/tables/: tab3_probe_to_target.tex  tab5_pareto_samples.tex
projects/perturb-seq-eval/scripts/: fetch_adamson.py  live_smoke.py  make_synthetic.py
projects/perturb-seq-eval/scripts/local/: analyze_lifecycle_results.py  bootstrap_and_analyze.py  collect_real_probes.py  full_local_dry_run.py  (+9 more)
projects/perturb-seq-eval/tests/: conftest.py  test_adamson_combined.py  test_agentic_lifecycle.py  test_architect_dispatch_v05.py  test_backbones.py  test_bayesian.py  test_calibration.py  test_data_download.py  test_data_subsample.py  test_experiments.py  test_fill_v050_numbers.py  test_freedom_e2e.py  test_freedom_probe.py  test_instrumentation.py  test_llm_agent_pool.py  test_metrics.py  test_metrics_extended.py  test_model.py  test_no_synthetic_generators.py  test_norman_loader.py  test_openrouter_client.py  test_optimizers.py  test_probe.py  test_proposal_schema.py  test_v05_analysis.py  test_validator_critique.py
(+137 files in other folders)
