[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttc-biofm"
version = "0.1.0"
description = "Test-time compute scaling for BioFM-265M genomic foundation model"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.2",
    "transformers>=4.42",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "datasets>=2.18",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=4", "ruff>=0.5", "black>=24.3"]
biofm = ["biofm-eval @ file://../../research/biofm-eval"]

[project.scripts]
ttc = "ttc.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast unit tests with no external I/O",
    "integration: requires real BioFM weights (skipped by default)",
]
